# sentio

./: .env.example  .gitignore  CLAUDE.md  CLEANUP_SUMMARY.md  Cargo.toml  Config.toml  GUIDE.md  PROJECT_README.md  PROJECT_STATUS.md  README.md  RR.md  TECHNICAL_DESIGN.md  TODO.md  docker-compose.yml  memory.json  sentio.example.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
config/: default.toml  prompts.yaml
docs/: API_REFERENCE.md  DEPLOYMENT.md  DEVELOPMENT_PLAN.md  DOCUMENTATION.md  DOCUMENTATION_SYNC_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  DOC_TEST_FIX_SUMMARY.md  FINAL_PROJECT_COMPLETION_SUMMARY.md  IMAP_REMOVAL_SUMMARY.md  INDEX.md  INDEX_NEW.md  LLM_CONFIG_REFACTOR_REPORT.md  LLM_SERVICE_IMPLEMENTATION_SUMMARY.md  MEMORY_SERVICE_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  PROJECT_STATUS_NEW.md  README.md  TASK_COMPLETION_VERIFICATION.md  TECHNICAL_DESIGN.md  UNIFIED_DATA_ACCESS_IMPLEMENTATION.md  USER_GUIDE.md  architecture.md  contributing.md  core_service.md  deployment-status.md  email_service.md  getting_started.md  llm_service.md  memory_service.md  services_overview.md  shared_logic.md  telemetry_service.md
scripts/: deploy-mongodb.sh  mongo-init.js
services/core/: Cargo.toml  README.md
services/core/src/: lib.rs  main.rs  test_utils.rs  workflow.rs
services/email/: Cargo.toml  README.md
services/email/src/: client.rs  error.rs  lib.rs  types.rs
services/llm/: Cargo.toml  README.md
services/llm/src/: client.rs  error.rs  lib.rs  types.rs
services/memory/: Cargo.toml  README.md  README_NEW.md
services/memory/src/: error.rs  lib.rs  memory_data.rs  memory_repository.rs  models.rs  mongo_repository.rs  repository.rs
services/memory/tests/: integration_tests.rs  memory_data_repository_tests.rs
services/shared_logic/: Cargo.toml  README.md
services/shared_logic/src/: config.rs  database.rs  lib.rs  memory_data.rs  types.rs
services/telemetry/: Cargo.toml  README.md
services/telemetry/src/: lib.rs
src/: config.rs  main.rs  telemetry.rs  workflow.rs
src/email/: client.rs  mod.rs
src/llm/: client.rs  mod.rs
src/memory/: mod.rs  store.rs
tests/: integration_tests.rs
