[workspace]
members = [
    "services/core",
    "services/shared_logic",
    "services/telemetry",
    "services/memory",
]
resolver = "2"

[workspace.dependencies]
# 共享依赖版本管理
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = "0.14"
chrono = { version = "0.4", features = ["serde"] }
