[package]
name = "sentio_core"
version = "0.1.0"
edition = "2021"

[dependencies]
shared_logic = { path = "../shared_logic" }
sentio_telemetry = { path = "../telemetry" }
sentio_llm = { path = "../llm" }
sentio_email = { path = "../email" }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
serde_json = "1.0"
bson = "2.9"
dotenv = "0.15"
async-trait = "0.1"
