[package]
name = "sentio_llm"
version = "0.1.0"
edition = "2021"

[dependencies]
# 从工作空间继承的依赖
serde = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

# LLM 服务特定依赖
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
async-trait = "0.1"

# 项目内部依赖
shared_logic = { path = "../shared_logic" }
sentio_telemetry = { path = "../telemetry" }
sentio_memory = { path = "../memory" }
