[package]
name = "sentio_memory"
version = "0.1.0"
edition = "2021"

[dependencies]
# 从工作空间继承的依赖
serde = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

# 记忆服务特定依赖
mongodb = "2.8"
tokio = { workspace = true }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = { workspace = true }
async-trait = "0.1"
bson = "2.9"
serde_json = "1.0"

# 项目内部依赖
shared_logic = { path = "../shared_logic" }
sentio_telemetry = { path = "../telemetry" }
