[package]
name = "shared_logic"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
config = { version = "0.14", features = ["yaml", "toml"] }
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.10"

[features]
default = []
