[package]
name = "shared_logic"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
config = { version = "0.14", features = ["yaml", "toml"] }
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
mongodb = "2.8"
bson = { version = "2.9", features = ["chrono-0_4"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3.10"

[features]
default = []
